# tg-cli

./: .env.example  .gitignore  CMakeLists.txt  README.md  build.sh  gpt.md
.github/workflows/: unit_tests.yaml
core_test/: main.cpp
main/: main.cpp
src/controllers/: AuthController.cpp  AuthController.h  ChatHistoryController.cpp  ChatHistoryController.h  GetChatsController.cpp  GetChatsController.h  LabelsController.cpp  LabelsController.h  SendMessageController.cpp  SendMessageController.h
src/facade/: TgClientFacade.cpp  TgClientFacade.h
src/label/: Label.cpp  Label.h  LabelsParser.cpp  LabelsParser.h
src/tgClient/: ITgClient.hpp  TgClientTdlib.cpp  TgClientTdlib.hpp  tgClient.cpp
tests/: test.cpp
tests/controllers/: AuthController.cpp
tests/label/: Label.cpp  LabelParserTest.cpp
